--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.2.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
-    "jest": "^27.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -45,5 +42,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.5.13",
+    "@types/redux-mock-store": "^1.0.6",
+    "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "redux-mock-store": "^1.5.4"
   }
 }
