--- a/package.json
+++ b/package.json
@@ -44,13 +44,16 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.7",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.13",
     "@types/redux-mock-store": "^1.0.6",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "ts-jest": "^29.2.5"
   }
 }
